# NationalGrid

./: README.md
demo/: webstreaming.py
demo/templates/: index.html
research/cpp/: CMakeLists.txt  cpu_registe_detect_v1.cpp  libtorch_classifier_v1.cpp
research/python/: .gitignore  main.py  merge.py  test.py  video.py
research/python/Step1/: api.py  scc.py  test.py
research/python/Step2/: api.py  func.py
research/python/Step3/: api.py  getmodel.py  requirements.txt  sim_ghost.py
resource/image/: v1.drawio
